--- a/assets/sass/modules/_author-bio.scss
+++ b/assets/sass/modules/_author-bio.scss
@@ -1,4 +1,5 @@
 @use "../mixins/mixins-master";
+@use "../variables-site/colors";
 
 .post-author {
 	&-bio {
@@ -7,7 +8,7 @@
 		margin: 40px 0;
 		padding-bottom: 40px;
 		@include mixins-master.grid-indent(12px);
-		border-bottom: 1px solid $color__background-hr;
+		border-bottom: 1px solid colors.$color__background-hr;
 	}
 	&__avatar {
 		.avatar {
